--- a/src/mock/front/viewer.html
+++ b/src/mock/front/viewer.html
@@ -26,10 +26,15 @@
 
 <!-- url,xml info -->
 <script type="text/javascript">
+// user id
 const p1 = "300002-352805988";
+// book id
 const p2 = "042000044227";
+// 没啥用
 const p3 = "https%3A%2F%2Fbooks.toraebook.com%2Ftoraebook%2Findex.php%3Fp%3Dpurchase%26viewer_flg%3D1";
+// 访问时间，也是没啥用
 const p4 = "20241205141849";
+// 用户身份token，有时效性，拿这个请求图片
 const p5 = "WFCOMFPQqxxfDMDzjpCPqOIjflZZnjyhTuFxdhxQuED5QeN_zBBIpjybqmCtpHqpP1gBbIbo4ntLneh3_i8JwVue98j04MOaMoQx_q8eqboS-xvBT5hs3gJaM3s9QB36gIwPxzOn8rwO0y2jc6jLVQQMS8e8bT3-7Yo-eKRaZF8nk2bGMqP4Mf4pIIlVV3d85IQbecBed7eugRSzM4rz7WI3aG65SlQQSUNIIIHIw0KujCKi8sGtSTvHe9RBpUPvFlyVJ7DcXzy4288g6oyXzZd5ttLdpn9oEyF2xF1fiw8R3D9WKIadX3A4xZuOB6l38CGLwdSzq3uS6SxzBMt5lqbAk3WUsGP-KQskpPv098Sl0sXMYIg4-lXH4DlaIV_XvW6xGSY4hBdzj7xlwre3EdJT2LFHBHMOLmZpC7gmtTETfhvBqvOrqWm-FBWNCEZwohXyPglB4Ozs8rrq9jsmb-EKg4F_6qjrwlNwbrHyiTGAN-vkZXPHVK0-5pI4hamGHyiBKqgaqjjfM7M_RTP_I_Kumfb0YzOh9fE6kB_KD0K2o2Xv5s0QJb4p01eiQ_wbrNv94Ds544gM0apQxH7n0KrPPvkoKp0aDQ3X5-0ZdU8TV-68KnAPv1lsJY_GS4ebOtH5k7S1qhtD2rqURt3LWeEhFpWplQZSyEeLgqr09_2wnRK5Un-NFiNIKFXWiyG0b6ff66UUJR3-Nvf_ShQoq1-aHyjeb49Lpwa9LO9XIT1nIA";
 const p6 = "";
 //const p7 = "魔法少女スターラビット　〜チ〇コ型モンスターに丸呑みされちゃった！？〜";
